Fix note-list overflow

--- a/src/styles/_note-sidebar.scss
+++ b/src/styles/_note-sidebar.scss
@@ -2,6 +2,13 @@
   background: $note-sidebar-color;
   border-right: 1px solid darken($note-sidebar-color, 10%);
 
+  overflow-y: hidden;
+  height: 100vh;
+
+  &:hover {
+    overflow-y: auto;
+  }
+
   &-header {
     padding: 0.5rem;
     border-bottom: 1px solid darken($note-sidebar-color, 8%);
@@ -15,7 +22,6 @@
 
   .note-list {
     &-each {
-      position: relative;
       cursor: pointer;
       padding: 0.25rem 0.5rem;
       border-bottom: 1px solid darken($note-sidebar-color, 8%);
